maze.lessons.maze.island.IslandMaze.scala.error
Escaper:29: error: not found: value keepHandOnWallSide
          keepHandOnWallSide(); setDirection(dir:Direction.NORD)
          ^Escaper:29: error: type NORD is not a member of object plm.universe.Direction
          keepHandOnWallSide(); setDirection(dir:Direction.NORD)
                                                           ^Escaper:29: error: not found: value dir
          keepHandOnWallSide(); setDirection(dir:Direction.NORD)
                                             ^