maze.lessons.maze.island.IslandMaze.scala.code
def keepHandOnSideWall() {
  gauche()
  if (estFaceMur() == false) {
    avance()
  } else {
    droite()
    if (estFaceMur() == false) {
      avance()
    } else {
      droite()
      if (estFaceMur() == false) {
        avance()
      } else {
        droite(); avance()
      }
    }
  }
}
override def run() {
  while (porteBiscuit() == false) {
    if (estSurBiscuit == true) {
      prendBiscuit()
    } else {
      while (getY() != 0) {
        if (estFaceMur() == false) {
          avance()
        } else {
          keepHandOnWallSide(); setDirection(dir:Direction.NORD)
        }
      }
      keepHandOnSideWall()
    }
  }
}